src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>bde__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__FirstDonationDate__c</fullName>
        <label>First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LastDonationDate__c</fullName>
        <label>Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LifetimeDonationHistory_Amount__c</fullName>
        <label>Lifetime Donation History (Amount)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LifetimeDonationHistory_Number__c</fullName>
        <label>Lifetime Donation History (Number)</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__One2OneContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEM_AccountType__c</fullName>
        <inlineHelpText>System field: do not use or change.</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOrganizations</fullName>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Parent_Organization_Salesforce_com</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Salesforce.com</value>
        </filters>
        <label>Parent Organization: Salesforce.com</label>
        <language>en_US</language>
    </listViews>
    <namedFilters>
        <fullName>Case_00NA0000006pO3dMAE</fullName>
        <active>true</active>
        <field>Case.Account__c</field>
        <filterItems>
            <field>Account.Name</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Remiinder, Account must have a name.</infoMessage>
        <isOptional>false</isOptional>
        <name>Case_Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>Standard_Account</fullName>
        <active>true</active>
        <description>Standard Non-1x1 Account</description>
        <label>Standard Account</label>
    </recordTypes>
    <validationRules>
        <fullName>No_Account_Name_Edits</fullName>
        <active>true</active>
        <description>Prevent 1x1 Account name edits for non-system-admins</description>
        <errorConditionFormula>AND(
$Profile.Id != &apos;00eA0000000OGmy&apos;,
NOT(ISNULL(npe01__One2OneContact__c)),
NOT(ISNEW()),
ISCHANGED(Name)
)</errorConditionFormula>
        <errorMessage>Please do not edit the 1x1 Account name.</errorMessage>
    </validationRules>
</CustomObject>